hero section in progress

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -29,12 +29,15 @@
       "path": "#source/scss/index.scss",
       "imports": [
         "#source/scss/null.scss",
+        "#source/scss/reusable.scss",
+        "#source/scss/hero.scss",
+        "#source/hovers/passing_underline.scss",
         "#source/raiting/raiting.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -144,7 +147,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"]}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"../css\"},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
@@ -158,7 +161,7 @@
   "file-type-slim": "{\"compilers\":[\"slim\"]}",
   "file-type-coffee-script": "{\"compilers\":[\"coffee-script\",\"uglify-js\"]}",
   "file-type-livescript": "{\"compilers\":[\"livescript\",\"uglify-js\"]}",
-  "file-type-kit": "{\"compilers\":[\"kit\"]}",
+  "file-type-kit": "{\"compilers\":[\"kit\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"relative\":\"../\"},\"outputSuffix\":null}",
   "uglify-js": {
     "ie8": false,
     "compress": {
