--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,17 @@
   "name": "7_bakery",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "#source/js/main.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "#source",
+      "#source/js"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -30,14 +38,25 @@
       "imports": [
         "#source/scss/null.scss",
         "#source/scss/reusable.scss",
-        "#source/scss/hero.scss",
+        "#source/scss/ibg.scss",
         "#source/hovers/passing_underline.scss",
-        "#source/raiting/raiting.scss"
+        "#source/scss/hero.scss",
+        "#source/scss/work_about.scss",
+        "#source/scss/services_reviews.scss",
+        "#source/raiting/raiting.scss",
+        "#source/contact/contact.scss"
+      ]
+    },
+    {
+      "path": "#source/js/main.js",
+      "imports": [
+        "#source/js/ibg.js",
+        "#source/js/form.js"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
